# DESaster

./: notes.txt  pyproject.toml  requirements.txt
.ipynb_checkpoints/: renters_landlords_test-checkpoint.ipynb
desaster/: hazus.py  technical.py  visualize.py
desaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
desaster/config/: desaster_input_data_template.xlsx  hazus_building_lookup_tables.xlsx
inputs/: desaster_input_data_template.xlsx  income.xlsx
inputs/.ipynb_checkpoints/: generate_fake_desaster_data-checkpoint.ipynb
scenarios/: aggregate_visualizations.ipynb  desaster_application_template.ipynb
scenarios/.ipynb_checkpoints/: Individual_Stats-checkpoint.ipynb  aggregate_visualizations-checkpoint.ipynb  inspect_desaster-checkpoint.ipynb  renters_landlords_recovery_programs-checkpoint.ipynb  renters_landlords_test-checkpoint.ipynb  scott_desaster_library_testing-checkpoint.ipynb  setResidence_testing-checkpoint.ipynb  simTester11-3-checkpoint.ipynb
